# ha-energy-planner

./: .codespellignore  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  ha-energy-planner-spec.md  hacs.json  pyproject.toml  quality_scale.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto_assign.yml  auto_assign_new_issues.yml  (+10 more)
docs/: requirements-audit.md
scripts/: docker-ha-smoke.sh  docker-validate.sh  export-live-schema-fixture.py  export-real-history-fixture.py  export-real-history-fixtures.sh  export-real-live-schema.sh  export-real-validation-bundle.sh  replay-fixture.py  validate-live-schema-fixture.py  validate-real-history-fixture.py  validate_quality_scale.py
tests/: test_ai_advisor.py  test_binary_sensor.py  test_config_flow.py  test_constraints.py  test_coordinator.py  test_diagnostics.py  test_discovery.py  test_enphase_adapter.py  test_entity.py  test_entity_metadata.py  test_ev.py  test_ev_adapter.py  test_ev_control_entities.py  test_executor.py  test_forecast_accuracy.py  test_forecast_calibration.py  test_forecasts.py  test_haeo_adapter.py  test_hvac_adapter.py  test_inputs.py  test_lifecycle.py  test_live_schema_export.py  test_live_schema_fixtures.py  test_manifest.py  test_ownership.py  test_planner.py  test_real_history_fixtures.py  test_recorder_import.py  test_remaining_coverage.py  test_replay.py  test_safety.py  test_sensor.py  test_services.py  test_storage.py  test_switch_button.py  test_system_health.py  test_thermal_model.py
(+63 files in other folders)
