[project]
name = "ha-energy-planner"
version = "0.2.1"
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["custom_components/ha_energy_planner"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
